Fix T48760: Changing Renderlayer Compositor node Layer does not update enabled outputs until script is finished